--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iliad/stream-ui": "workspace:*",
     "mitt": "^3.0.1",
     "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "browserslist": "^4.25.0",
+    "caniuse-lite": "^1.0.30001723",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "typescript": "^5"
