chore: reconfigure for pnpm; changes to pass build and test

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,9 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@iliad/stream-ui": ["./types/stream-ui-shim"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "../libs/stream-ui"]
 }
