--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "turbo run dev --parallel",
     "build": "next build",
+    "test": "vitest run",
+    "turbo": "turbo",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ci": "turbo run build test --filter='...[HEAD^]'"
   },
   "dependencies": {
     "@iliad/stream-ui": "file:../libs/stream-ui",
@@ -26,6 +29,8 @@
     "caniuse-lite": "^1.0.30001723",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "turbo": "^1.13.0",
+    "vitest": "^1.5.0"
   }
 }
