--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,16 +4,21 @@ autobahn==23.1.2
 Automat==22.10.0
 cffi==1.15.1
 channels==4.0.0
+channels-redis==4.2.0
 constantly==15.1.0
 cryptography==40.0.2
 daphne==4.0.0
-Django==4.2.1
+django==4.2.1
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.4.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+Pillow
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
+PyJWT==2.8.0
 pyOpenSSL==23.1.1
 service-identity==21.1.0
 six==1.16.0
@@ -22,6 +27,3 @@ Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.5.0
 zope.interface==6.0
-djangorestframework==3.14.0
-PyJWT==2.8.0
-Pillow
