--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@iliad/stream-ui": "file:../libs/stream-ui",
+    "@supabase/supabase-js": "2.50.0",
     "mitt": "^3.0.1",
     "mml-react": "0.4.7",
     "next": "15.3.3",
@@ -29,8 +30,8 @@
     "caniuse-lite": "^1.0.30001723",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "typescript": "^5",
     "turbo": "^1.13.0",
+    "typescript": "^5",
     "vitest": "^1.5.0"
   }
 }
