--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "caniuse-lite": "^1.0.30001723",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "@playwright/test": "^1.41.2",
     "turbo": "^1.13.0",
     "typescript": "^5",
     "vitest": "^1.5.0"
