--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,14 +23,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.41.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "5.28.5",
     "browserslist": "^4.25.0",
     "caniuse-lite": "^1.0.30001723",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@playwright/test": "^1.41.2",
     "turbo": "^1.13.0",
     "typescript": "^5",
     "vitest": "^1.5.0"
