--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "libs/*"
   ],
   "devDependencies": {
-    "turbo": "^1.13.4"
+    "@types/jest": "29",
+    "jest": "29",
+    "jest-websocket-mock": "2",
+    "ts-jest": "29",
+    "turbo": "^1.13.4",
+    "typescript": "5"
+  },
+  "scripts": {
+    "test": "turbo run test && jest"
   }
 }
