--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 save-exact=true
 engine-strict=true
-package-lock=false    # <- disables package-lock.json generation
+#package-lock=false    # <- disables package-lock.json generation
