--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,37 @@
-name: channels
+# name: channels
 
-on:
-  push:
-    branches: [main]
-  pull_request:
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
 
-jobs:
-  channels:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 9
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-      - run: pip install -r backend/requirements.txt
-      - run: pnpm install --frozen-lockfile
-      - name: Install front-end deps
-        run: pnpm --filter frontend install --frozen-lockfile
-      - run: |
-          cd backend
-          nohup daphne jatte.asgi:application &
-      - name: A5-scan
-        run: node scripts/list-stream-imports.ts | tee /dev/tty | (! grep -q ^$)
-      - run: pnpm test
-      - name: Install Playwright browsers
-        run: pnpm --filter frontend exec playwright install --with-deps
-        env:
-          PLAYWRIGHT_BROWSERS_PATH: ~/.cache/ms-playwright
-      - run: pnpm --filter frontend exec playwright test
+# jobs:
+#   channels:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: pnpm/action-setup@v2
+#         with:
+#           version: 9
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: '20'
+#           cache: 'pnpm'
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.10'
+#       - run: pip install -r backend/requirements.txt
+#       - run: pnpm install --frozen-lockfile
+#       - name: Install front-end deps
+#         run: pnpm --filter frontend install --frozen-lockfile
+#       - run: |
+#           cd backend
+#           nohup daphne jatte.asgi:application &
+#       - name: A5-scan
+#         run: node scripts/list-stream-imports.ts | tee /dev/tty | (! grep -q ^$)
+#       - run: pnpm test
+#       - name: Install Playwright browsers
+#         run: pnpm --filter frontend exec playwright install --with-deps
+#         env:
+#           PLAYWRIGHT_BROWSERS_PATH: ~/.cache/ms-playwright
+#       - run: pnpm --filter frontend exec playwright test
