--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "turbo run dev --parallel",
+    "turbo-dev": "turbo run dev --parallel",
+    "dev":       "next dev -p 3000",
     "build": "next build",
     "test": "vitest run",
     "turbo": "turbo",
