--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "turbo-dev": "turbo run dev --parallel",
-    "dev":       "next dev -p 3000",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "test": "vitest run",
     "turbo": "turbo",
@@ -19,7 +19,8 @@
     "mml-react": "0.4.7",
     "next": "15.3.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sonner": "2.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
