Prep for 233 full shim coverage strategy

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 save-exact=true
 engine-strict=true
 #package-lock=false    # <- disables package-lock.json generation
+public-hoist-pattern[]=stream-chat-react
