--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "emoji-dictionary": "1.0.12",
     "stream-chat-react": "13.2.1"
   },
-  "packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f"
+  "packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f",
+  "pnpm": {
+    "overrides": {
+      "stream-chat-react": "13.2.1"
+    }
+  }  
 }
