--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -66,7 +66,7 @@
     "method": "POST",
     "path": "/link-preview/",
     "operationId": "createLinkPreview",
-    "status": "missing",
+    "status": "ok",
     "todoCount": 0
   },
   {
