feat(createMessage): broadcast event and wire channel.sendMessage

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -15,7 +15,7 @@
     "stubName": "channel.sendMessage",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
