feat(endSession): document endpoint

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -60,7 +60,7 @@
     "stubName": "disconnectUser",
     "ticketType": "api",
     "todoCount": 2,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
