feat(getAppSettings): implement

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -69,7 +69,7 @@
     "stubName": "getAppSettings",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
