feat(listUserAgents): implement get user agent fetch

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -96,7 +96,7 @@
     "stubName": "getUserAgent",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
