feat(listUsers): implement user query endpoint

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -105,7 +105,7 @@
     "stubName": "client.queryUsers",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
