feat(muteStatus): document endpoint

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -114,7 +114,7 @@
     "stubName": "channel.muteStatus",
     "ticketType": "api",
     "todoCount": 2,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
