feat(muteUser): wire up user mute API

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -123,7 +123,7 @@
     "stubName": "muteUser",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
@@ -177,7 +177,7 @@
     "stubName": "unmuteUser",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
