--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -132,7 +132,7 @@
     "stubName": "threads.registerSubscriptions",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
@@ -141,7 +141,7 @@
     "stubName": "polls.registerSubscriptions",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
@@ -150,7 +150,7 @@
     "stubName": "reminders.registerSubscriptions",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
