feat(syncUser): wire up connect user

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -168,7 +168,7 @@
     "stubName": "connectUser",
     "ticketType": "api",
     "todoCount": 2,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
