feat(updateMessage): implement message update endpoint

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -186,7 +186,7 @@
     "stubName": "client.updateMessage",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
