feat(channel.markRead): implement shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -258,7 +258,7 @@
     "stubName": "channel.markRead",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
