feat(channel.on): implement shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -276,7 +276,7 @@
     "stubName": "channel.on",
     "ticketType": "shim",
     "todoCount": 11,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
