feat(channel.unpin): add shim implementation and tests

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -321,7 +321,7 @@
     "stubName": "channel.unpin",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
