feat(client.off): implement shim and tests

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -348,7 +348,7 @@
     "stubName": "client.off",
     "ticketType": "shim",
     "todoCount": 22,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
