feat(client.reminders.createReminder): wire up shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -33,7 +33,7 @@
     "stubName": "client.reminders.createReminder",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
