feat(client.threads.activate): implement shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -384,7 +384,7 @@
     "stubName": "client.threads.activate",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
