feat(shim::client.threads.deactivate): implement

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -393,7 +393,7 @@
     "stubName": "client.threads.deactivate",
     "ticketType": "shim",
     "todoCount": 2,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
