--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -416,11 +416,11 @@
   {
     "method": "",
     "path": "",
-    "operationId": "shim::client.threads.state",
-    "stubName": "client.threads.state",
-    "ticketType": "shim",
-    "todoCount": 1,
-    "status": "missing"
+  "operationId": "shim::client.threads.state",
+  "stubName": "client.threads.state",
+  "ticketType": "shim",
+  "todoCount": 1,
+  "status": "ok"
   },
   {
     "method": "",
