feat(markUnread): implement shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -483,7 +483,7 @@
     "stubName": "markUnread",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
