chore(on(poll.vote_casted)): update manifest

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -195,7 +195,7 @@
     "stubName": "addAnswer",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
@@ -510,7 +510,7 @@
     "stubName": "on(poll.vote_casted)",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
