feat(polls.unregisterSubscriptions): add shim and update manifest

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -555,7 +555,7 @@
     "stubName": "polls.unregisterSubscriptions",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
