feat(reminders.registerSubscriptions): add shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -150,7 +150,7 @@
     "stubName": "reminders.registerSubscriptions",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
