feat(shim::sendAction): implement

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -671,8 +671,8 @@
     "operationId": "shim::sendAction",
     "stubName": "sendAction",
     "ticketType": "shim",
-    "todoCount": 1,
-    "status": "missing"
+    "todoCount": 0,
+    "status": "ok"
   },
   {
     "method": "",
