feat(setUserAgent): implement API call

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -159,7 +159,7 @@
     "stubName": "setUserAgent",
     "ticketType": "api",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
