feat(threads.unregisterSubscriptions): add shim

--- a/openapi/wireup_manifest.json
+++ b/openapi/wireup_manifest.json
@@ -708,7 +708,7 @@
     "stubName": "threads.unregisterSubscriptions",
     "ticketType": "shim",
     "todoCount": 1,
-    "status": "missing"
+    "status": "ok"
   },
   {
     "method": "",
